# cppyy

./: .gitignore  INSTALLATION  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
bench/: Makefile  bench_functioncalls.py  functioncalls.cxx  functioncalls.h  functioncalls.xml  py11_functioncalls.cxx  py_functioncalls.py  py_runvector.py  support.py
doc/: make.bat  requirements.txt
doc/source/: basic_types.rst  bindings_generation.rst  bugs.rst  builtins.rst  changelog.rst  classes.rst  cmake_interface.rst  conf.py  cppyy_features_header.rst  cuda.rst  debugging.rst  developers.rst  distribution.rst  examples.rst  features.rst  functions.rst  index.rst  installation.rst  license.rst  lowlevel.rst  misc.rst  numba.rst  philosophy.rst  programmatic_access.rst  pythonizations.rst  repositories.rst  starting.rst  stl.rst  strings.rst  toplevel.rst  utilities.rst
installer/: cppyy_monkey_patch.py
test/: Makefile  advancedcpp.cxx  advancedcpp.h  advancedcpp.xml  assert_interactive.py  bindexplib.py  conversions.cxx  conversions.h  cpp11features.cxx  cpp11features.h  cpp11features.xml  crossinheritance.cxx  crossinheritance.h  crossinheritance.xml  datatypes.cxx  datatypes.h  datatypes.xml  doc_helper.h  feature_doc_test.py  fragile.cxx  fragile.h  make_dict_win32.py  operators.cxx  operators.h  operators.xml  overloads.cxx  overloads.h  overloads.xml  pythonizables.cxx  pythonizables.h  stltypes.cxx  stltypes.h  stltypes.xml  support.py  templ_args_funcs.py  templates.cxx  templates.h  templates.xml  test.py  test_aclassloader.py  (+24 more)
(+12 files in other folders)
