[build-system]
requires = ["CPyCppyy==1.11.3; python_implementation != 'PyPy'",
            "cppyy-backend==1.13.2; python_implementation != 'PyPy'",
            "cppyy-cling==6.21.2; python_implementation != 'PyPy'",
            "cppyy-cling<=6.18.2.3; python_implementation == 'PyPy'",
            "setuptools", "wheel"]
