[build-system]
requires = ["CPyCppyy==1.11.4; python_implementation != 'PyPy'",
            "cppyy-backend==1.14.0; python_implementation != 'PyPy'",
            "cppyy-cling==6.21.3; python_implementation != 'PyPy'",
            "cppyy-cling<=6.18.2.3; python_implementation == 'PyPy'",
            "setuptools", "wheel"]
